--- a/views/pages/index.jade
+++ b/views/pages/index.jade
@@ -20,7 +20,7 @@ html(lang="en")
 					.links
 						a(href ='#{root}/').active главная
 						a(href ='#{root}/about.html') о нас
-						a(href ='#{root}/pricing') цены
+						a(href ='#{root}/pricing.html') цены
 						a(href ='#{root}/contacts.html') контакты
 						a(href ='#{root}/#').button.button-normal.button-grey начать
 				.site-header
