images removed into css folder

--- a/public/css/main.styl
+++ b/public/css/main.styl
@@ -145,7 +145,7 @@ hr
 
 .wrapper
 	max-width: 100%
-	background: #d2d2d2 url('/img/street.jpg')
+	background: #d2d2d2 url('street.jpg')
 	color: #fff
 	background-size: cover
 	-webkit-background-size: cover
@@ -211,7 +211,7 @@ hr
 
 	
 .phone-icon
-	background:url('/img/phone-icon.png')
+	background:url('phone-icon.png')
 	background-size: cover
 	float: left
 	width: 20px
