Added fadein and out effectsto the header

--- a/public/css/main.styl
+++ b/public/css/main.styl
@@ -172,6 +172,7 @@ hr
 	height: 80px
 	color: #fff
 	border-bottom: 1px solid #9E9E9E
+	position: relative
 	.logo
 		text-transform: uppercase
 		font-weight: 600
@@ -225,6 +226,7 @@ hr
 
 .site-header
 	margin-top: 180px
+	position: relative
 	
 .site-header 
 	h1
