--- a/views/pages/index.jade
+++ b/views/pages/index.jade
@@ -12,11 +12,12 @@ html(lang="en")
 			.bg
 			.content
 				.header-nav 
-					a(href="#{root}/").logo
-						h1 wapik
-					p 
-						span.phone-icon 
-						|+375 44 545 67 98 
+					.logo-block
+						a(href="#{root}/").logo
+							h1 wapik
+						p 
+							span.phone-icon 
+							|+375 44 545 67 98 
 					.links
 						a(href ='#{root}/').active главная
 						a(href ='#{root}/about.html') о нас
