--- a/public/css/main.styl
+++ b/public/css/main.styl
@@ -60,6 +60,7 @@ hr
 		
 .content
 	width: 70%
+	min-width: 500px
 	margin: 0 auto
 
 .content:before, .content:after, .row:after, .row:before, .clear:before, .clear:after, header:before, header:after	
@@ -144,7 +145,7 @@ hr
 	width: 100%
 
 .wrapper
-	max-width: 100%
+	min-width: 500px
 	background: #d2d2d2 url('street.jpg')
 	color: #fff
 	background-size: cover
